Colaboratory를 통해 생성됨

--- a/statistic_01.ipynb
+++ b/statistic_01.ipynb
@@ -7,6 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +98,7 @@
         "id": "wxDJ3UzoKH3g"
       },
       "source": [
-        "선수연봉 2016년 subset"
+        "*선수연봉* 2018년 subset"
       ]
     },
     {
@@ -106,8 +107,8 @@
         "id": "2X1uG8WRu-O2"
       },
       "source": [
-        "df16=df[(df['yearID']==2016) & (df['salary']>0)] #연봉 0 초과 선수만 활용\n",
-        "df16.head(3)"
+        "df18=df[(df['yearID']==2016) & (df['salary']>0)] #연봉 0 초과 선수만 활용\n",
+        "df18.head(3)"
       ],
       "execution_count": null,
       "outputs": []
@@ -119,7 +120,7 @@
       },
       "source": [
         "import plotly.express as px\n",
-        "fig = px.scatter(df16, x=\"salary\", y=\"playerID\", color=\"lgID\",title=\"Player Salary with lgID\")\n",
+        "fig = px.scatter(df18, x=\"salary\", y=\"playerID\", color=\"lgID\",title=\"Player Salary with lgID\")\n",
         "fig.show()"
       ],
       "execution_count": null,
@@ -131,7 +132,7 @@
         "id": "vNw6oseLly6_"
       },
       "source": [
-        "#!pip install seaborn"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -144,7 +145,7 @@
       "source": [
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "sns.kdeplot(df26.salary).set_title('Kernel of 2016 Salary')\n",
+        "sns.kdeplot(df18.salary).set_title('Kernel of 2018 Salary')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -156,7 +157,7 @@
         "id": "woxJUd8Fwtek"
       },
       "source": [
-        "sns.distplot(df16.salary).set_title('Histogram of 2016 Salary')\n",
+        "sns.distplot(df18.salary).set_title('Histogram of 2018 Salary')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -168,7 +169,7 @@
         "id": "9cxvz7gbxkKY"
       },
       "source": [
-        "sns.boxplot(x=\"salary\",data =df16).set_title('Boxplot of 2016 Salary')\n",
+        "sns.boxplot(x=\"salary\",data =df18).set_title('Boxplot of 2018 Salary')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -183,7 +184,7 @@
         "## 실습\n",
         "\n",
         "\n",
-        "*   2016년 선수연봉과 2011년 선수연봉의 상자그림을 그리고 시각적으로 해석하시오.\n",
+        "*   2018년 선수연봉과 2011년 선수연봉의 상자그림을 그리고 시각적으로 해석하시오.\n",
         "\n",
         "\n",
         "\n"
@@ -224,7 +225,7 @@
         "id": "eZopD6W-LVaI"
       },
       "source": [
-        "df_sample=df16['salary'].sample(n=50, random_state=123) #seed=109"
+        "df_sample=df18['salary'].sample(n=50, random_state=123) #seed=109"
       ],
       "execution_count": null,
       "outputs": []
@@ -235,7 +236,7 @@
         "id": "Cl43sslHMZC3"
       },
       "source": [
-        "sns.boxplot(df_sample).set_title('Boxplot of 2016 Salary : train=sample')\n",
+        "sns.boxplot(df_sample).set_title('Boxplot of 2018 Salary : train=sample')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -258,7 +259,7 @@
       "source": [
         "xbar=[]\n",
         "for k in range(0,100):\n",
-        "  xbar.append(df16['salary'].sample(n=50).mean())"
+        "  xbar.append(df18['salary'].sample(n=50).mean())"
       ],
       "execution_count": null,
       "outputs": []
@@ -269,7 +270,7 @@
         "id": "H7I1uDKkVD5H"
       },
       "source": [
-        "sns.boxplot(xbar).set_title('Boxplot of 2016 Salary : sample-mean')\n",
+        "sns.boxplot(xbar).set_title('Boxplot of 2018 Salary : sample-mean')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -282,7 +283,7 @@
       },
       "source": [
         "##모집단 추론\n",
-        "2016년 MLB 선수들의 연봉이 40만불 이상인가?"
+        "2086년 MLB 선수들의 연봉이 40만불 이상인가?"
       ]
     },
     {
@@ -292,7 +293,7 @@
       },
       "source": [
         "pd.options.display.float_format = '{:.2f}'.format\n",
-        "print('Population mean %.1f' % df16['salary'].mean()) #모잡단 연봉"
+        "print('Population mean %.1f' % df18['salary'].mean()) #모잡단 연봉"
       ],
       "execution_count": null,
       "outputs": []
