Colaboratory를 통해 생성됨

--- a/statistic_01.ipynb
+++ b/statistic_01.ipynb
@@ -26,7 +26,8 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -47,6 +48,28 @@
       "source": [
         "MLB 선수연봉 데이터 불러오기"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8z-i0vHCVAQn"
+      },
+      "source": [
+        "!nvcc --version"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OJ-P9zFFVG0G"
+      },
+      "source": [
+        "!nvcc --help"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
