Target variable -> tip

--- a/SQL/target_tip.ipynb
+++ b/SQL/target_tip.ipynb
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "id": "8fb95c95-ccfb-4815-900a-91baf2a0524d",
    "metadata": {},
    "outputs": [],
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "id": "8b736901-b57f-4e04-a51a-91f223d7b1f9",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1090,7 @@
        " 'score_func': <function sklearn.feature_selection._univariate_selection.f_regression(X, y, *, center=True)>}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,22 +1102,52 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ff718fa2-1b4e-4618-b1d3-f49e6a218d5d",
+   "id": "ace38c04-3e82-4b80-9841-76ba37702ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters['score_func']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "00e94950-6db5-4b8e-8a73-bd037a6e4eee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_features = fs.fit(data_trans, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "fc19fdff-2d54-46e9-809c-50b9b76e6dab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "9deacbd0-039b-49cb-b869-ed1c59802977",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function sklearn.feature_selection._univariate_selection.f_regression(X, y, *, center=True)>"
+       "array([0, 3, 4, 5], dtype=int64)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parameters['score_func']"
+    "fs.get_support(indices=True)"
    ]
   },
   {
@@ -1161,17 +1191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "id": "f5c12642-eb99-4619-b48d-4794a3d565d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_rfe_selected = pd.DataFrame(X_selected)"
+    "df_rfe_selected = pd.DataFrame(X_selected, columns=['total_bill', 'day', 'time', 'size'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "id": "280a55e6-70b4-4111-86bf-f2e73475b96f",
    "metadata": {},
    "outputs": [
@@ -1196,10 +1226,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1264,7 +1294,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                0           1           2           3\n",
+       "       total_bill         day        time        size\n",
        "count  252.000000  252.000000  252.000000  252.000000\n",
        "mean    19.702500    1.750000    0.730159    2.587302\n",
        "std      8.803699    1.148791    0.444761    0.959497\n",
@@ -1275,7 +1305,7 @@
        "max     50.810000    3.000000    1.000000    6.000000"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
